# plasma-lionmail

./: CMakeLists.txt  Messages.sh  TODO  lionmail.cpp  lionmail.h  lionmailConfig.ui  mailextender.cpp  mailextender.h  plasma-applet-lionmail.desktop  plasma-applet-plasmobiff.desktop  plasmobiff.cpp  plasmobiff.h
declarative/: CMakeLists.txt
declarative/emailmessage/: CMakeLists.txt  plasma-applet-active-emailmessage.desktop
declarative/emailmessage/package/: metadata.desktop
declarative/emailmessage/package/contents/code/: EmailMessage.qml
declarative/messagecollection/: CMakeLists.txt  plasma-applet-active-messagecollection.desktop
declarative/messagecollection/package/: metadata.desktop
declarative/messagecollection/package/contents/code/: MessageCollection.qml
deprecated/: CMakeLists.txt  mailextender.cpp  mailextender.h  plasma-applet-lionmail.desktop
emailmessage/: .directory  CMakeLists.txt  Messages.sh  emaildialog.cpp  emaildialog.h  emailmessage.cpp  emailmessage.h  emailwidget.cpp  emailwidget.h  plasma-applet-emailmessage.desktop
emailnotifier/: CMakeLists.txt  Messages.sh  dialog.cpp  dialog.h  emaillist.cpp  emaillist.h  emailnotifier.cpp  emailnotifier.h  emailnotifierConfig.ui  emailwidget.cpp  emailwidget.h  importantemaillist.cpp  importantemaillist.h  plasma-applet-emailnotifier.desktop
emailnotifier/copied_classes/: checkableitemproxymodel.h  entitymodelstatesaver.h  messagestatus.h  modelstatesaver.cpp  modelstatesaver.h
qml/emailmessage/: metadata.desktop
qml/emailmessage/contents/code/: main
qml/messagecollection/package/: metadata.desktop
qml/messagecollection/package/contents/ui/: main.qml
qml/singleemail/singleemail/contents/code/: main
